--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,7 @@ body {
 .contenedor {
 	width: 90%;
 	max-width: 900px;
+	margin-top: 30px;
 }
 
 .contenedor-lista {
@@ -56,8 +57,8 @@ body {
 
 /* ? Clases para los estilos en los diferentes estados del drag and drop */
 .lista .persona.seleccionado {
-	transform: scale(1.02) rotate(-1deg);
-	box-shadow: 0px 0px 20px rgba(149, 153, 159, .16);
+	transform: scale(1.02) rotate(-3deg);
+	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.40);
 }
 
 .lista .persona.fantasma {
